--- a/main.ui
+++ b/main.ui
@@ -211,7 +211,7 @@
   <widget class="QPushButton" name="PoiskButton">
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>10</x>
      <y>490</y>
      <width>161</width>
      <height>31</height>
@@ -337,6 +337,50 @@
    </property>
    <property name="text">
     <string>Вся</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="DelButto">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>500</y>
+     <width>161</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Segoe UI Black</family>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <italic>true</italic>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Удалить</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="AddButton">
+   <property name="geometry">
+    <rect>
+     <x>620</x>
+     <y>500</y>
+     <width>161</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Segoe UI Black</family>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <italic>true</italic>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Добавить</string>
    </property>
   </widget>
  </widget>
