--- a/katalog.ui
+++ b/katalog.ui
@@ -16,39 +16,23 @@
   <property name="windowTitle">
    <string>chernokolpakov</string>
   </property>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>961</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Segoe UI Black</family>
-     <pointsize>20</pointsize>
-     <weight>75</weight>
-     <italic>true</italic>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>Лучшие Предложения!</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
   <widget class="QLabel" name="Image">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>10</x>
      <y>60</y>
      <width>461</width>
      <height>271</height>
     </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">
+
+border: 3px solid black;
+backgroun-image:cover;</string>
    </property>
    <property name="text">
     <string/>
@@ -57,8 +41,8 @@
   <widget class="QPushButton" name="NextButton">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>390</y>
+     <x>20</x>
+     <y>410</y>
      <width>141</width>
      <height>41</height>
     </rect>
@@ -79,8 +63,8 @@
   <widget class="QPushButton" name="PrevButton">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>390</y>
+     <x>250</x>
+     <y>410</y>
      <width>141</width>
      <height>41</height>
     </rect>
@@ -95,6 +79,47 @@
    </property>
    <property name="text">
     <string>Вперед</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>230</y>
+     <width>421</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Segoe UI Black</family>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <italic>false</italic>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QTextBrowser" name="textBrowser">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>60</y>
+     <width>421</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Segoe UI Black</family>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <italic>true</italic>
+     <bold>true</bold>
+    </font>
    </property>
   </widget>
  </widget>
