--- a/katalog.ui
+++ b/katalog.ui
@@ -37,6 +37,9 @@ backgroun-image:cover;</string>
    <property name="text">
     <string/>
    </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="NextButton">
    <property name="geometry">
