--- a/otchet.ui
+++ b/otchet.ui
@@ -53,7 +53,7 @@
     <rect>
      <x>100</x>
      <y>210</y>
-     <width>171</width>
+     <width>191</width>
      <height>21</height>
     </rect>
    </property>
@@ -129,7 +129,7 @@
     <date>
      <year>2021</year>
      <month>12</month>
-     <day>21</day>
+     <day>27</day>
     </date>
    </property>
   </widget>
@@ -159,10 +159,10 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="label_8">
+  <widget class="QLabel" name="BrakNumber">
    <property name="geometry">
     <rect>
-     <x>280</x>
+     <x>300</x>
      <y>210</y>
      <width>151</width>
      <height>16</height>
@@ -178,17 +178,17 @@
      <x>250</x>
      <y>280</y>
      <width>101</width>
-     <height>16</height>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>Итог:</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_7">
+  <widget class="QLabel" name="SummNumber">
    <property name="geometry">
     <rect>
-     <x>300</x>
+     <x>330</x>
      <y>280</y>
      <width>121</width>
      <height>16</height>
